hq sandbox - latest/src/objects/Github_Issue_Case_Association__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Issue_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Github_Issue__c</fullName>
        <label>Github Issue</label>
        <referenceTo>Github_Issue__c</referenceTo>
        <relationshipName>Case_Issue_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Github_Issue__r.State__c)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <label>Github Issue Case Association</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Case Issue Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Github Issue Case Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>